--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.1",
   "description": "Currency Order Tool",
   "main": "package/index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "node test"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/colohr/currency.order.git"
   },
-  "author": "",
+  "author": {
+    "name": "colohr",
+    "email": "colohr.code@gmail.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/colohr/currency.order/issues"
@@ -21,6 +18,7 @@
   "homepage": "https://github.com/colohr/currency.order#readme",
   "dependencies": {
     "currency-formatter": "^1.3.2",
-    "fxy": "^0.1.72"
+    "fxy": "^0.1.72",
+    "money": "^0.2.0"
   }
 }
